--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,25 +1,28 @@
 .button {
-	border-radius: 6px;
-	padding: 8px 30px;
 	font-family: inherit;
 	cursor: pointer;
 	transition: background 0.25s;
-	font-size: 16px;
 	border: none;
-	color: #FFFFFF;
-	width: fit-content;
-}
-.button:nth-child(2) {
-	margin-left: 20px;
-	background: rgba(189, 28, 28, 1);
+	color: var(--white-color);
+	border-radius: 29px;
+	font-style: normal;
 }
 
-.accent:nth-child(1):hover {
-	background: #222096;
+.small {
+	font-size: 16px;
+	font-weight: 400;
+	padding: 10px 25px;
 }
-.accent:nth-child(2):hover {
-	background: rgba(189, 28, 28, .65);
+
+.big {
+	font-size: 15px;
+	text-transform: uppercase;
+	padding: 20px 60px;
+}
+
+.accent:hover {
+	background: var(--primary-hover-color);
 }
 .accent {
-	background: #312EB5;
+	background: var(--primary-color);
 }
